--- a/src/app/@auth/components/login/login.component.html
+++ b/src/app/@auth/components/login/login.component.html
@@ -15,7 +15,7 @@
     *ngIf="account && username"
     (click)="disconnectWallet()"
   >
-    Connect
+    Disconnect
   </button>
   <span class="description">Connect your wallet to your network to start working!</span>
   <a>Ground Control</a>
