--- a/src/app/pages/users/users.component.html
+++ b/src/app/pages/users/users.component.html
@@ -4,4 +4,17 @@
   ~ See LICENSE_SINGLE_APP / LICENSE_MULTI_APP in the 'docs' folder for license information on type of purchased license.
   -->
 
-<div>Logging out, please wait...</div>
+<nb-card>
+  <nb-card-header>
+    Users List
+  </nb-card-header>
+
+  <nb-card-body>
+    <ng2-smart-table
+      [settings]="settings"
+      [source]="source"
+      (edit)="onEdit($event)"
+      >
+    </ng2-smart-table>
+  </nb-card-body>
+</nb-card>
