--- a/src/app/pages/users/users.component.scss
+++ b/src/app/pages/users/users.component.scss
@@ -15,3 +15,23 @@
     transform: translate3d(0, 0, 0);
   }
 }
+
+.list-content {
+  margin-top: 100px;
+  overflow-y: auto;
+  width: 100%;
+}
+
+.listitem {
+  margin-top: 20px;
+  list-style: none;
+}
+
+.item {
+  margin-left: 40px;
+  font-size: 20px;
+}
+
+.add-button {
+  margin-left: 40px;
+}
